@@ -378,11 +378,11 @@ class MainFrame(wx.Frame):
 
 ##http://wiki.wxpython.org/Widget%20Inspection%20Tool
 ## Use ctrl+alt+i to open it.
-import wx.lib.mixins.inspection
+#import wx.lib.mixins.inspection
 ## Start the main frame and then show it.
-class App(wx.App, wx.lib.mixins.inspection.InspectionMixin) :
+class App(wx.App ):#, wx.lib.mixins.inspection.InspectionMixin) :
 	def OnInit(self):
-		self.Init()  # initialize the inspection tool
+		#self.Init()  # initialize the inspection tool
 		
 		## Initial dialogue to inform user about their potential fate:
 		if not "unicode" in wx.PlatformInfo:
@@ -402,10 +402,7 @@ class App(wx.App, wx.lib.mixins.inspection.InspectionMixin) :
 		frame.Show(True) 
 		ss.Close()
 
-
-
 		return True
-		
 ## app
 app = App(0) 
 		
